# etymology-for-all

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog-check.yml
backend/: .gitignore  database.py  download_data.py  download_language_codes.py  enrich_definitions.py  ingest.py  main.py  requirements.txt  sql_loader.py
backend/data/: language_codes.json
backend/sql/: 01_create_words.sql  02_create_links.sql  03_create_indexes.sql  04_create_macros.sql  05_create_views.sql  06_create_language_families.sql  07_create_definitions_raw.sql
backend/sql/enrichment/: check_table_exists.sql  create_definition_indexes.sql  enrichment_stats.sql  materialize_definitions.sql  words_to_enrich.sql  words_to_enrich_initial.sql
backend/sql/ingestion/: 01_drop_tables.sql  02_create_words.sql  03_create_links.sql  04_create_sequences.sql  05_create_indexes.sql  06_create_macros.sql  07_create_views.sql  08_create_language_families.sql  09_create_definitions_raw.sql
backend/sql/queries/: find_start_word.sql  get_language_families.sql  get_language_info.sql  search_words.sql  traverse_etymology.sql
backend/tests/: test_api.py
cloudflare-worker/: worker.js  wrangler.toml
frontend/: app.js  index.html  styles.css
frontend/js/: app.js  graph.js  search.js  tree.js  ui.js  utils.js
notebooks/: data_exploration.py
research/load-testing/: README.md  locustfile.py
