[project]
name = "etymology-for-all"
version = "0.1.0"
description = "Backend API for the Etymology Graph Explorer"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "pytest>=8.4.2",
]
