[project]
name = "etymology-for-all"
version = "0.1.0"
description = "Backend API for the Etymology Graph Explorer"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "altair>=6.0.0",
    "duckdb>=1.4.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "pytest>=8.4.2",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
